# titanic-ml-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  Titanic_Prediction.ipynb  pyproject.toml
.github/workflows/: cd.yml  ci.yml  google-cloudrun-docker.yml  main.yml
app/: __init__.py  main.py  schema.py
models/: model_pipeline.joblib
notebooks/: Titanic_Prediction.ipynb
src/: preprocess.py  train.py
tests/: test_api.py  test_preprocessor.py  test_schema.py
