[project]
name = "titanic-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
# Optional: Specific ruff configuration
line-length = 88
target-version = "py312" # Matches your project's python version
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable Pyflakes, Error, and Isort rules

